fixed buggy navbar, now can dropdown on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -43,14 +43,21 @@ p {
 }
 
 /*=== NAVBAR ===*/
-#navbarSupportedContent {
+/*#navbarSupportedContent {
   display: flex;
   justify-content: center;
+}*/
+
+nav ul {
+  margin: 0 auto;
 }
 
 nav {
-  min-height: 60px;
   text-transform: uppercase;
+}
+
+.bg-dark {
+  background-color: #1a1a1a!important;
 }
 
 /*overwrite stubborn Bootstrap*/
@@ -64,10 +71,21 @@ nav {
 
 .checkout {
   margin-left: auto;
+  min-width: 100px;
+}
+
+.fa {
+  font-size: 1.3em;
+}
+
+.checkout .fa {
+  margin-right: 0.3em;
 }
 
 
 /*=== FOOTER ===*/
+
+/* inner content of each section in the footer */
 .footer-container {
   display: flex;
   flex-direction: column;
@@ -105,6 +123,17 @@ footer .col {
   margin-bottom: 0px;
 }
 
+/*-- general footer --*/
+footer {
+  background-color: #1a1a1a;
+  position: relative;
+}
+
+/*-- keeps footer content from disappearing behind copyright --*/
+.footer-row {
+  padding-bottom: 120px;
+}
+
 footer h3 {
   border-bottom: 1px solid #EFEFEF;
   text-align: center;
@@ -113,24 +142,7 @@ footer h3 {
   margin-bottom: 2em;
 }
 
-/* these three make the footer stick...*/
-html, body {
-  height: 100%;
-}
-body {
-  display: flex;
-  flex-direction: column;
-}
-.content-wrapper {
-  flex: 1 0 auto;
-}
-
-footer {
-  background-color: #343a40;
-  min-height: 600px;
-  position: relative;
-}
-
+/*-- copyright --*/
 .copyright {
   min-height: 80px;
   background-color: #000;
@@ -146,3 +158,38 @@ footer {
 .copyright p {
   padding-left: 30px;
 }
+
+/*size and SMALLER*/
+/*Extra small devices (portrait phones, less than 576px)*/
+@media (max-width: 575px) {  }
+
+/*Small devices (landscape phones, less than 768px)*/
+@media (max-width: 767px) {  }
+
+/*Medium devices (tablets, less than 992px)*/
+@media (max-width: 991px) {
+  .checkout {
+    margin: 1em;
+    min-width: 0px;
+  }
+  .navbar-nav {
+    margin: 0 auto;
+  }
+ }
+
+/*Large devices (desktops, less than 1200px)*/
+@media (max-width: 1199px) {  }
+
+
+/*size and BIGGER*/
+/*Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) { }
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) { }
+
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) { }
+
+/*Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) { }
